[BUGFIX][LessonExercises] fixed layout to be responsive on mobile

--- a/client/components/lessons/LessonExercises/LessonExercises.module.scss
+++ b/client/components/lessons/LessonExercises/LessonExercises.module.scss
@@ -29,3 +29,12 @@
     }
   }
 }
+@media screen and (max-width: 600px) {
+  .exercises-wrapper {
+    & > [class*=ExercisePreview] {
+      width: 100%;
+      margin-right: 0;
+      margin-bottom: 2em;
+    }
+  }
+}
